finalisacion pilas rehacer deshacer y historial

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -5,3 +5,15 @@
 /Deshacer.class
 /Rehacer.class
 /Datos.class
+/Click$1.class
+/Iniciado$1.class
+/Click$2.class
+/Click$3.class
+/Click$4.class
+/Click$5.class
+/Click$6.class
+/Click$7.class
+/Click$8.class
+/Click$9.class
+/Iniciado$2.class
+/Iniciado$3.class
